# Crunch

./: .gitignore  BRANCH_AUDIT.md  LICENSE  README.md  RELEASE_NOTES_v1.1.0.md  alembic.ini  pyproject.toml
.github/workflows/: release.yml
backend/: .env.example  package-lock.json  package.json  tsconfig.json
backend/src/: config.ts  index.ts
backend/src/db/: index.ts
backend/src/middleware/: auth.ts
backend/src/routes/: admin.ts  auth.ts  chat.ts  connections.ts  dashboards.ts  folders.ts  git.ts  mcp.ts  mcpClientOAuth.ts  pipelines.ts  queries.ts  visualizations.ts  viz.ts
backend/src/services/: auth.ts  authProviders.ts  chatTools.ts  crypto.ts  gitOps.ts  ldapAuth.ts  mcpClient.ts  mcpOAuth.ts  oidc.ts  parameters.ts  permissions.ts  pipelines.ts  pythonEngine.ts  samlAuth.ts  settings.ts  ssrfGuard.ts  versioning.ts  workspaceSync.ts
backend/src/services/chatTools/: dashboards.ts  data.ts  navigate.ts  pipelines.ts  queries.ts  types.ts
config/: connections.example.yaml  settings.example.toml
docker/: .env.example  Dockerfile  Dockerfile.backend  Dockerfile.engine  Dockerfile.frontend  docker-compose.dev.yml  docker-compose.yml  nginx.conf
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts  router.ts
frontend/src/api/: client.ts
frontend/src/assets/: styles.css
frontend/src/components/: AuthSettingsPanel.vue  ChartPanel.vue  ChatMessage.vue  ChatPanel.vue  ConnectionsPanel.vue  DashboardFilterBar.vue  DashboardWidget.vue  FolderRow.vue  FolderScanDialog.vue  FolderTree.vue  McpSettingsPanel.vue  ParametersPanel.vue  PermissionsPanel.vue  PipelineLogViewer.vue  PipelineSettingsPanel.vue  PipelineTimeline.vue  ProposalCard.vue  QueryRow.vue  ResultsTable.vue  RevisionHistoryDialog.vue  SaveVisualizationDialog.vue  SqlEditor.vue  ThinkingBlock.vue  ToolCallList.vue  TopBar.vue  WidgetMappingDialog.vue
frontend/src/composables/: markdown.ts  monaco-setup.ts  theme.ts
frontend/src/stores/: auth.ts  chat.ts  dashboards.ts  pipelines.ts  visualizations.ts  workspace.ts
frontend/src/types/: shims.d.ts
frontend/src/views/: AdminView.vue  AppShell.vue  DashboardDetailView.vue  DashboardsView.vue  LoginView.vue  PipelineDetailView.vue  PipelinesView.vue  WorkspaceView.vue
python-engine/: README.md  requirements.txt  server.py
scripts/: migrate_python_to_express.py
src/crunch/: __init__.py  cli.py  main.py
src/crunch/auth/: __init__.py  models.py  users.py
src/crunch/config/: __init__.py  connections.py  settings.py
src/crunch/connections/: __init__.py  file_scanner.py  manager.py
src/crunch/connections/adapters/: __init__.py  bigquery.py  clickhouse.py  databricks.py  duckdb_adapter.py  file_adapter.py  mariadb.py  mongodb.py  mysql.py  postgresql.py  redshift.py  snowflake.py  sqla_warehouse.py  sqlite.py  sqlserver.py  trino.py
src/crunch/core/: __init__.py  database.py  models.py
src/crunch/core/migrations/: __init__.py  env.py
src/crunch/core/migrations/versions/: .gitkeep
src/crunch/pipelines/: __init__.py  context.py  executor.py  templates.py
src/crunch/query/: __init__.py  builder.py  executor.py  validator.py
src/crunch/services/: __init__.py  agent_conversation_service.py  agent_service.py  connection_service.py  dashboard_service.py  folder_service.py  git_service.py  package_service.py  pending_state.py  query_service.py  visualization_service.py
src/crunch/ui/: __init__.py  app.py  utils.py
src/crunch/ui/components/: __init__.py  agent_panel.py  chart_widget.py  folder_tree.py  query_builder_widget.py  sidebar.py  sql_editor_widget.py
src/crunch/ui/pages/: admin.py  connections.py  dashboard.py  home.py  query_builder.py  sql_editor.py
src/crunch/visualization/: __init__.py  code_executor.py  code_generator.py  factory.py
src/crunch/visualization/renderers/: __init__.py  altair_renderer.py  bokeh_renderer.py  matplotlib_renderer.py  plotly_renderer.py  seaborn_renderer.py
src/nicemeta/: __init__.py  cli.py  main.py
src/nicemeta/auth/: __init__.py  models.py  schemas.py  users.py
src/nicemeta/config/: __init__.py  connections.py  settings.py
src/nicemeta/connections/: __init__.py  base.py  file_scanner.py  manager.py
src/nicemeta/connections/adapters/: __init__.py  bigquery.py  clickhouse.py  csv_adapter.py  databricks.py  duckdb_adapter.py  excel_adapter.py  file_adapter.py  mariadb.py  mongodb.py  mysql.py  postgresql.py  redshift.py  snowflake.py  sqla_warehouse.py  sqlite.py  sqlserver.py  trino.py
src/nicemeta/core/: __init__.py  database.py  models.py
src/nicemeta/core/migrations/: env.py
src/nicemeta/core/migrations/versions/: 001_initial_schema.py  002_add_python_code_to_visualization.py  003_add_agent_conversations.py  004_add_allowed_packages.py
src/nicemeta/pipelines/: __init__.py  executor.py
src/nicemeta/query/: __init__.py  executor.py  template.py
src/nicemeta/services/: __init__.py  agent_conversation_service.py  agent_service.py  connection_service.py  dashboard_service.py  folder_service.py  git_service.py  package_service.py  query_service.py  visualization_service.py
src/nicemeta/ui/: __init__.py  app.py  helpers.py  theme.py  utils.py
src/nicemeta/ui/components/: __init__.py  agent_panel.py  chart_widget.py  folder_tree.py  inline_diff.py  python_editor_widget.py  query_builder_widget.py  sidebar.py  sql_editor_widget.py
src/nicemeta/ui/pages/: __init__.py  admin.py  connections.py  dashboard.py  home.py  query_builder.py  sql_editor.py
src/nicemeta/visualization/: __init__.py  base.py  chart_types.py  code_executor.py  code_generator.py  factory.py
src/nicemeta/visualization/renderers/: __init__.py  altair_renderer.py  bokeh_renderer.py  matplotlib_renderer.py  plotly_renderer.py  seaborn_renderer.py
tests/: __init__.py  test_basic.py  test_template.py
